--- a/src/app/components/posts/post-create/post-create.component.html
+++ b/src/app/components/posts/post-create/post-create.component.html
@@ -1,9 +1,17 @@
 <mat-card>
-  <mat-form-field>
-    <input type="text" matInput [(ngModel)]='postTitle'>
-  </mat-form-field>
-  <mat-form-field>
-    <textarea matInput [(ngModel)]='postText'></textarea>
-  </mat-form-field>
-  <button mat-raised-button color='accent' (click)='createPost()'>Submit</button>
+  <!-- ngForm directive gives access to only form instead of entire HTML -->
+  <form (submit)='createPost(postForm)' #postForm='ngForm'>
+    <mat-form-field>
+      <!-- [(ngModel)] can be replaced with ngModel in form where name is what binds the value -->
+      <!-- <input type="text" matInput [(ngModel)]='postTitle'> -->
+      <input type="text" matInput ngModel name="title" #title='ngModel' required>
+      <mat-error *ngIf="title.invalid">Please enter valid Title</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <!-- <textarea matInput [(ngModel)]='postText'></textarea> -->
+      <textarea matInput ngModel name="content" #content='ngModel' required></textarea>
+      <mat-error *ngIf="content.invalid">Please enter valid Content</mat-error>
+    </mat-form-field>
+    <button mat-raised-button color='accent' type="submit">Submit</button>
+  </form>
 </mat-card>
