--- a/src/app/components/posts/post-list/post-list.component.html
+++ b/src/app/components/posts/post-list/post-list.component.html
@@ -4,6 +4,10 @@
       {{post?.title}}
     </mat-expansion-panel-header>
     {{post?.content}}
+    <mat-action-row>
+      <button mat-button color="primary">EDIT</button>
+      <button mat-button color="warn" (click)='onDelete(post.id)'>DELETE</button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p *ngIf='posts.length === 0' class="mat-body-1">No posts available</p>
