--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,9 @@
-<mat-toolbar color='primary'>My App</mat-toolbar>
+<mat-toolbar color='primary'>
+  <span>
+    <a routerLink='/'>My App</a>
+  </span>
+  <span class="spacer"></span>
+  <ul>
+    <li><a [routerLink]='["create"]' mat-button routerLinkActive='mat-accent'>New Post</a></li>
+  </ul>
+</mat-toolbar>
