--- a/src/app/components/posts/post-list/post-list.component.html
+++ b/src/app/components/posts/post-list/post-list.component.html
@@ -1,4 +1,5 @@
-<mat-accordion *ngIf='posts.length > 0'>
+<mat-spinner *ngIf='isLoading'></mat-spinner>
+<mat-accordion *ngIf='posts.length > 0 && !isLoading'>
   <mat-expansion-panel *ngFor='let post of posts'>
     <mat-expansion-panel-header>
       {{post?.title}}
@@ -10,4 +11,4 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p *ngIf='posts.length === 0' class="mat-body-1">No posts available</p>
+<p *ngIf='posts.length === 0 && !isLoading' class="mat-body-1">No posts available</p>
