--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,4 +6,10 @@
   <ul>
     <li><a [routerLink]='["create"]' mat-button routerLinkActive='mat-accent'>New Post</a></li>
   </ul>
+  <ul>
+    <li><a [routerLink]='["login"]' mat-button routerLinkActive='mat-accent'>Login</a></li>
+  </ul>
+  <ul>
+    <li><a [routerLink]='["signup"]' mat-button routerLinkActive='mat-accent'>Sign Up</a></li>
+  </ul>
 </mat-toolbar>
