--- a/src/app/components/posts/post-list/post-list.component.css
+++ b/src/app/components/posts/post-list/post-list.component.css
@@ -5,3 +5,13 @@
 mat-spinner {
   margin: auto;
 }
+.post-img {
+  width: 100%;
+}
+.post-img > img {
+  width: 100%;
+  box-shadow: 1px 1px 5px rgb(0, 0, 0, 0.5);
+}
+mat-paginator {
+  margin-top: 1rem;
+}
