--- a/src/app/components/posts/post-list/post-list.component.html
+++ b/src/app/components/posts/post-list/post-list.component.html
@@ -4,6 +4,9 @@
     <mat-expansion-panel-header>
       {{post?.title}}
     </mat-expansion-panel-header>
+    <div class="post-img">
+      <img [src]='post?.imagePath' [alt]='post?.title'>
+    </div>
     {{post?.content}}
     <mat-action-row>
       <a mat-button color="primary" [routerLink]='["edit", post.id]'>EDIT</a>
@@ -12,3 +15,11 @@
   </mat-expansion-panel>
 </mat-accordion>
 <p *ngIf='posts.length === 0 && !isLoading' class="mat-body-1">No posts available</p>
+<mat-paginator
+[length]='length'
+[pageSize]='pageSize'
+[pageSizeOptions]='pageSizeOptions'
+(page)='onChangedPage($event)'
+>
+
+</mat-paginator>
