--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,12 +4,15 @@
   </span>
   <span class="spacer"></span>
   <ul>
-    <li><a [routerLink]='["create"]' mat-button routerLinkActive='mat-accent'>New Post</a></li>
+    <li *ngIf='isAuthenticated'><a [routerLink]='["create"]' mat-button routerLinkActive='mat-accent'>New Post</a></li>
   </ul>
   <ul>
-    <li><a [routerLink]='["login"]' mat-button routerLinkActive='mat-accent'>Login</a></li>
+    <li *ngIf='!isAuthenticated'><a [routerLink]='["login"]' mat-button routerLinkActive='mat-accent'>Login</a></li>
   </ul>
   <ul>
-    <li><a [routerLink]='["signup"]' mat-button routerLinkActive='mat-accent'>Sign Up</a></li>
+    <li *ngIf='!isAuthenticated'><a [routerLink]='["signup"]' mat-button routerLinkActive='mat-accent'>Sign Up</a></li>
+  </ul>
+  <ul>
+    <li *ngIf='isAuthenticated' (click)='onLogout()'><a mat-button routerLinkActive='mat-accent'>Logout</a></li>
   </ul>
 </mat-toolbar>
