--- a/src/app/components/posts/post-list/post-list.component.html
+++ b/src/app/components/posts/post-list/post-list.component.html
@@ -8,18 +8,12 @@
       <img [src]='post?.imagePath' [alt]='post?.title'>
     </div>
     {{post?.content}}
-    <mat-action-row>
+    <mat-action-row *ngIf='isAuthenticated'>
       <a mat-button color="primary" [routerLink]='["edit", post.id]'>EDIT</a>
       <button mat-button color="warn" (click)='onDelete(post.id)'>DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <p *ngIf='posts.length === 0 && !isLoading' class="mat-body-1">No posts available</p>
-<mat-paginator
-[length]='length'
-[pageSize]='pageSize'
-[pageSizeOptions]='pageSizeOptions'
-(page)='onChangedPage($event)'
->
-
+<mat-paginator [length]='length' [pageSize]='pageSize' [pageSizeOptions]='pageSizeOptions' (page)='onChangedPage($event)'>
 </mat-paginator>
